--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,13 @@
 body {background-color: grey;
 font-style: italic;
-font-family: sans-serif;}
+font-family: sans-serif;
+}
 
 h1 {color: blue;
   text-align: center
 
+}
+
+p{
+  font-family: courier;
 }
