--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,26 @@ h1 {color: blue;
 
 }
 
+h2 {color:blue;
+text-align: center;}
+
 p{
   font-family: courier;
+}
+
+
+ul{
+font-size: 20px;
+line-height: 20px;
+
+}
+
+img {
+
+  float:right;
+}
+
+.class1 {font-style: italic;
+  font-family: cursive;
+
 }
