--- a/css/styles.css
+++ b/css/styles.css
@@ -45,10 +45,8 @@ img {
 }
 
 .class1 {
-  font-size: 30px;
-  line-height: 30px
-  font-style: italic;
-  font-family: cursive;
+ display: flex;
+ text-align: 
 
 }
 
