add bootstrap, changed styles, added another picture to images file and wrote more text

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,9 +44,13 @@ img {
   float:right;
 }
 
+.container {
+  text-align: center;
+}
+
 .class1 {
  display: flex;
- text-align: 
+ text-align:
 
 }
 
