--- a/css/styles.css
+++ b/css/styles.css
@@ -4,19 +4,19 @@ body {
   font-family: sans-serif;
 }
 
-h2 {
+h1 {
   color: blue;
   text-align: center;
 
 }
 
-h3 {
+h2 {
   color:blue;
-  text-align: left;
+  text-align: center;
 
 }
 
-h4 {
+h3 {
   color:blue;
   text-align: left;
 
@@ -46,7 +46,8 @@ line-height: 20px;
 
 .class1 {
  display: flex;
- text-align:
+ text-align: center;
+ align-items: center;
 
 }
 
